--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,15 @@
         android:theme="@style/Theme.Hsb"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.EditAccountActivity"
+            android:name=".ui.account.activity.edit_account_acitivity.EditAccountActivity"
             android:exported="false"
-            android:parentActivityName=".ui.activity.ListAccountActivity">
+            android:parentActivityName=".ui.account.activity.ListAccountActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.activity.ListAccountActivity"/>
+                android:value=".ui.account.activity.ListAccountActivity"/>
         </activity>
         <activity
-            android:name=".ui.activity.ListAccountActivity"
+            android:name=".ui.account.activity.ListAccountActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
