--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
@@ -20,7 +21,15 @@
             android:parentActivityName=".ui.account.activity.ListAccountActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.account.activity.ListAccountActivity"/>
+                android:value=".ui.account.activity.ListAccountActivity" />
+        </activity>
+        <activity
+            android:name=".ui.account.activity.edit_category_activity.EditCategoryActivity"
+            android:exported="false"
+            android:parentActivityName=".ui.account.activity.ListAccountActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.account.activity.ListAccountActivity" />
         </activity>
         <activity
             android:name=".ui.account.activity.ListAccountActivity"
