--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -15,11 +15,7 @@
         android:theme="@style/Theme.Hsb"
         tools:targetApi="31">
         <activity
-            android:name=".ui.activity.CreateServiceActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".ui.activity.ViewServiceActivity"
+            android:name=".ui.auth.activity.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,17 +24,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.EditAccountActivity"
+            android:name=".ui.samplepackage.activity.CreateServiceActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.ListAccountActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".ui.samplepackage.activity.ViewServiceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.samplepackage.activity.EditAccountActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
