--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
                 android:value=".ui.account.activity.ListAccountActivity"/>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.auth.activity.LoginActivity"
             android:exported="true">
         </activity>
     </application>
