--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.hsb"
-        minSdk 30
+        minSdk 31
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,12 @@ dependencies {
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
+    testImplementation libs.junit
+    androidTestImplementation libs.ext.junit
+    androidTestImplementation libs.espresso.core
+    implementation libs.constraintlayout
+    implementation libs.cardview
+
     //
     implementation "androidx.core:core:1.13.1"
     implementation "androidx.core:core-ktx:1.13.1"
@@ -40,31 +46,20 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //Gson
     implementation 'com.google.code.gson:gson:2.8.8'
-
+    //Okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'com.google.code.gson:gson:2.8.8'
     //RetrofitClient
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation libs.cardview
-
+    //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation libs.constraintlayout
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
+    //Lombok
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
 
     implementation 'com.google.android.material:material:1.2.1'
-
-    testImplementation libs.junit
-    androidTestImplementation libs.ext.junit
-    androidTestImplementation libs.espresso.core
-
-
 
 
 }
